<resources>
    <string name="app_name">Parstagram</string>
    <string name="title_home">Home</string>
    <string name="title_new_post">Add New Post</string>
    <string name="title_profile">Profile</string>
    <string name="loginButton">Log in</string>
    <string name="signUpButton">Sign Up</string>
    <string name="logOutButton">Log out</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="new_password">New Password *</string>
    <string name="new_password_again">New Password Again *</string>
    <string name="new_username">New Username *</string>
    <string name="email">Email</string>
    <string name="emptyString" />
    <string name="caption">Caption</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="toast_login_err">Issue with login</string>
    <string name="toast_login_succ">Success!</string>
    <string name="toast_success">Success!</string>
    <string name="toast_desc_empt">Description can not be empty</string>
    <string name="toast_img_empt">Every post must have an image!</string>
    <string name="toast_save_err">Error while saving!</string>
    <string name="toast_save_succ">Success!</string>
    <string name="toast_camera_err">Picture wasn\'t taken!</string>
    <string name="toast_required_fields_err">Required fields must be filled out!</string>
    <string name="toast_match_password">Passwords must match</string>
    <string name="toast_signup_err">Could not sign up</string>
    <string name="empty_string" />
    <string name="file_authority">com.codepath.fileprovider.Parstagram</string>
    <string name="description">Description: </string>
    <string name="usernamecolon">Username: </string>
    <string name="timestamp">Timestamp: </string>
    <string name="choose_picture_from_library">Choose Picture from Library</string>
    <string name="number_of_comments">Number of Comments:</string>
    <string name="number_of_likes">Number of Likes:</string>
    <string name="there_are_no_comments_on_this_post">There are no comments on this post!</string>
    <string name="error_saving_comment">Error saving comment</string>
</resources>