<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/colorBtn"
        android:text="@string/take_picture"
        android:textColor="@color/colorTextBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:ems="10"
        android:hint="@string/caption"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/btnCamera"
        app:layout_constraintTop_toBottomOf="@+id/ivPost" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="92dp"
        android:text="@string/submit"
        android:backgroundTint="@color/colorBtn"
        android:textColor="@color/colorTextBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCaption" />

    <ImageView
        android:id="@+id/ivPost"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="@+id/btnCamera"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera"
        tools:src="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>