<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUsernameTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernamecolon"
            android:textColor="@color/text_primary"
            app:layout_constraintEnd_toEndOf="@+id/tvDescriptionTag"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/text_secondary"
            android:paddingStart="5dp"
            app:layout_constraintTop_toTopOf="@id/tvUsernameTag"
            app:layout_constraintStart_toEndOf="@id/tvDescriptionTag"
            tools:text="username" />

        <TextView
            android:id="@+id/tvDescriptionTag"
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/text_secondary"
            android:paddingStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tvDescriptionTag"
            app:layout_constraintTop_toTopOf="@id/tvDescriptionTag"
            tools:text="description" />

        <TextView
            android:id="@+id/tvTimestampTag"
            android:text="@string/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/text_secondary"
            android:paddingStart="5dp"
            app:layout_constraintStart_toEndOf="@id/tvTimestampTag"
            app:layout_constraintTop_toTopOf="@id/tvTimestampTag"
            tools:text="timestamp" />

        <TextView
            android:id="@+id/tvLikesTag"
            android:text="@string/number_of_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvTimestampTag"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/text_secondary"
            android:paddingStart="5dp"
            app:layout_constraintStart_toEndOf="@id/tvLikesTag"
            app:layout_constraintTop_toTopOf="@id/tvLikesTag"
            tools:text="likes" />

        <TextView
            android:id="@+id/tvCommentsTag"
            android:text="@string/number_of_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvLikesTag"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/text_secondary"
            android:paddingStart="5dp"
            app:layout_constraintStart_toEndOf="@id/tvCommentsTag"
            app:layout_constraintTop_toTopOf="@id/tvCommentsTag"
            tools:text="comments" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>